--- a/src/mobile_app/package.json
+++ b/src/mobile_app/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-devtools": "^3.6.3",
+    "react-native": "0.61.5",
+    "react-native-communications": "^2.2.1",
+    "react-native-device-info": "^5.5.3",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
+    "@babel/core": "7.8.6",
     "@babel/runtime": "7.8.4",
     "@react-native-community/eslint-config": "0.0.5",
     "babel-jest": "24.9.0",
