--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-
-
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -32,6 +30,7 @@ coverage.xml
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+migrations
 
 # Flask stuff:
 instance/
