--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 channels = "*"
 djangorestframework = "*"
 channels-redis = "*"
+djangorestframework-simplejwt = "*"
 
 [requires]
 python_version = "3.7"
