--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-black = "*"
+autopep8 = "*"
 
 [packages]
 django = "*"
@@ -12,6 +12,7 @@ channels = "*"
 djangorestframework = "*"
 channels-redis = "*"
 djangorestframework-simplejwt = "*"
+paho-mqtt = "*"
 
 [requires]
 python_version = "3.7"
