Feat(gsm_module): New gsm control applications for the sim800l module. Styke(mqtt.py, view.py): Format Changes.

--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ channels-redis = "*"
 djangorestframework-simplejwt = "*"
 paho-mqtt = "*"
 psycopg2 = "*"
+pyserial = "*"
 
 [requires]
 python_version = "3.7"
