--- a/src/server/bconf.d/broker.conf
+++ b/src/server/bconf.d/broker.conf
@@ -6,6 +6,6 @@ allow_duplicate_messages false
 listener 1883
 allow_anonymous false
 
-# samuel aqui tienes que poner la direccion donde quede el archivo pwfile en tu maquina
+# no borrar, solo comentar o quitar del comentario la linea de codigo
+# password_file /home/gabriel/myApps/pasantiaUnexpoEnv/unexpo-bedrock/src/server/bconf.d/pwfile.txt
 password_file ./pwfile.txt
-
