--- a/src/mobile_app/android/app/build.gradle
+++ b/src/mobile_app/android/app/build.gradle
@@ -78,7 +78,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    enableHermes: false,  // clean and rebuild if changing
+    enableHermes: true,  // clean and rebuild if changing
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -132,15 +132,15 @@ android {
         applicationId "com.bedrock"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "0.0.3"
     }
     splits {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+            universalApk true  // If true, also generate a universal APK
+            include "x86", "arm64-v8a", "x86_64"
         }
     }
     signingConfigs {
@@ -149,6 +149,12 @@ android {
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
+        }
+        release {
+            storeFile file('bedrock.keystore')
+            storePassword '88905django'
+            keyAlias 'orlando'
+            keyPassword ''
         }
     }
     buildTypes {
