--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ djangorestframework-simplejwt = "*"
 paho-mqtt = "*"
 psycopg2 = "*"
 pyserial = "*"
+django-filter = "*"
+python-dateutil = "*"
 
 [requires]
 python_version = "3.7"
