feat(HomeScreen, UserBoard): Blocked users can't access UI

--- a/src/mobile_app/ios/Podfile
+++ b/src/mobile_app/ios/Podfile
@@ -77,6 +77,8 @@ target 'Bedrock' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
+
   target 'BedrockTests' do
     inherit! :complete
     # Pods for testing
