--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/home/gabriel/.local/share/virtualenvs/unexpo-bedrock-XLNwGxZ8/bin/python",
-    "python.formatting.provider": "black"
+    "python.pythonPath": "/home/gabriel/.cache/pypoetry/virtualenvs/unexpo-bedrock-nlAza01n-py3.7",
+    "python.formatting.provider": "autopep8"
 }
