Feat (mqtt): Mqtt publish/subscribe example in Django

--- a/src/server/bconf.d/broker.conf
+++ b/src/server/bconf.d/broker.conf
@@ -7,5 +7,5 @@ listener 1883
 allow_anonymous false
 
 # samuel aqui tienes que poner la direccion donde quede el archivo pwfile en tu maquina
-password_file /home/pi/server/mqtt/bconf.d/pwfile.txt
+password_file ./pwfile.txt
 
